[+] Inicio Regressão Logistica e Naive Bayes

--- a/Regressão Linear.ipynb
+++ b/Regressão Linear.ipynb
@@ -9,9 +9,13 @@
     "\n",
     ">  1. Implementação Regressão Linear Univariada via Gradiente Descendente\n",
     ">  2. Implementação Regressão Linear univariada via Gradiente Descendente Estocástico\n",
+    "\n",
     ">  3. Implementação Regressão Linear Multivariada via Gradiente Descendente\n",
     ">  4. Implementação Regressão Linear Multivariada via Gradiente Descendente Estocástico\n",
-    ">  4. Implementação Regressão Linear Analítica - OLS - Minímos quadrados ordinários\n",
+    ">  5. Implementação Regressão Linear Analítica - OLS - Minímos quadrados ordinários\n",
+    "\n",
+    ">  6. Implementação Regressão Linear Polinomial\n",
+    ">  7. Implementação da Regularização\n",
     "\n",
     "---\n",
     "### Como saber se está correto?\n",
@@ -214,454 +218,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Implementação Regressão Logistíca"
+    "# 6. Implementação Regressão Linear Polinomial"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 125,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>34.623660</td>\n",
-       "      <td>78.024693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30.286711</td>\n",
-       "      <td>43.894998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>35.847409</td>\n",
-       "      <td>72.902198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>60.182599</td>\n",
-       "      <td>86.308552</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>79.032736</td>\n",
-       "      <td>75.344376</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>45.083277</td>\n",
-       "      <td>56.316372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>61.106665</td>\n",
-       "      <td>96.511426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>75.024746</td>\n",
-       "      <td>46.554014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>76.098787</td>\n",
-       "      <td>87.420570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>84.432820</td>\n",
-       "      <td>43.533393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>95.861555</td>\n",
-       "      <td>38.225278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>75.013658</td>\n",
-       "      <td>30.603263</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>82.307053</td>\n",
-       "      <td>76.481963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>69.364589</td>\n",
-       "      <td>97.718692</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>39.538339</td>\n",
-       "      <td>76.036811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>53.971052</td>\n",
-       "      <td>89.207350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>69.070144</td>\n",
-       "      <td>52.740470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>67.946855</td>\n",
-       "      <td>46.678574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>70.661510</td>\n",
-       "      <td>92.927138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>76.978784</td>\n",
-       "      <td>47.575964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>67.372028</td>\n",
-       "      <td>42.838438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>89.676776</td>\n",
-       "      <td>65.799366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>50.534788</td>\n",
-       "      <td>48.855812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>34.212061</td>\n",
-       "      <td>44.209529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>77.924091</td>\n",
-       "      <td>68.972360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>62.271014</td>\n",
-       "      <td>69.954458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>80.190181</td>\n",
-       "      <td>44.821629</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>93.114389</td>\n",
-       "      <td>38.800670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>61.830206</td>\n",
-       "      <td>50.256108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>38.785804</td>\n",
-       "      <td>64.995681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>32.722833</td>\n",
-       "      <td>43.307173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>64.039320</td>\n",
-       "      <td>78.031688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>72.346494</td>\n",
-       "      <td>96.227593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>60.457886</td>\n",
-       "      <td>73.094998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>58.840956</td>\n",
-       "      <td>75.858448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>99.827858</td>\n",
-       "      <td>72.369252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>47.264269</td>\n",
-       "      <td>88.475865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>50.458160</td>\n",
-       "      <td>75.809860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>60.455556</td>\n",
-       "      <td>42.508409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>82.226662</td>\n",
-       "      <td>42.719879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>88.913896</td>\n",
-       "      <td>69.803789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>94.834507</td>\n",
-       "      <td>45.694307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>67.319257</td>\n",
-       "      <td>66.589353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>57.238706</td>\n",
-       "      <td>59.514282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>80.366756</td>\n",
-       "      <td>90.960148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>68.468522</td>\n",
-       "      <td>85.594307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>42.075455</td>\n",
-       "      <td>78.844786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>75.477702</td>\n",
-       "      <td>90.424539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>78.635424</td>\n",
-       "      <td>96.647427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>52.348004</td>\n",
-       "      <td>60.769505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>94.094331</td>\n",
-       "      <td>77.159105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>90.448551</td>\n",
-       "      <td>87.508792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>55.482161</td>\n",
-       "      <td>35.570703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>74.492692</td>\n",
-       "      <td>84.845137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>89.845807</td>\n",
-       "      <td>45.358284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>83.489163</td>\n",
-       "      <td>48.380286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>42.261701</td>\n",
-       "      <td>87.103851</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>99.315009</td>\n",
-       "      <td>68.775409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>55.340018</td>\n",
-       "      <td>64.931938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>74.775893</td>\n",
-       "      <td>89.529813</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           x1         x2\n",
-       "0   34.623660  78.024693\n",
-       "1   30.286711  43.894998\n",
-       "2   35.847409  72.902198\n",
-       "3   60.182599  86.308552\n",
-       "4   79.032736  75.344376\n",
-       "5   45.083277  56.316372\n",
-       "6   61.106665  96.511426\n",
-       "7   75.024746  46.554014\n",
-       "8   76.098787  87.420570\n",
-       "9   84.432820  43.533393\n",
-       "10  95.861555  38.225278\n",
-       "11  75.013658  30.603263\n",
-       "12  82.307053  76.481963\n",
-       "13  69.364589  97.718692\n",
-       "14  39.538339  76.036811\n",
-       "15  53.971052  89.207350\n",
-       "16  69.070144  52.740470\n",
-       "17  67.946855  46.678574\n",
-       "18  70.661510  92.927138\n",
-       "19  76.978784  47.575964\n",
-       "20  67.372028  42.838438\n",
-       "21  89.676776  65.799366\n",
-       "22  50.534788  48.855812\n",
-       "23  34.212061  44.209529\n",
-       "24  77.924091  68.972360\n",
-       "25  62.271014  69.954458\n",
-       "26  80.190181  44.821629\n",
-       "27  93.114389  38.800670\n",
-       "28  61.830206  50.256108\n",
-       "29  38.785804  64.995681\n",
-       "..        ...        ...\n",
-       "70  32.722833  43.307173\n",
-       "71  64.039320  78.031688\n",
-       "72  72.346494  96.227593\n",
-       "73  60.457886  73.094998\n",
-       "74  58.840956  75.858448\n",
-       "75  99.827858  72.369252\n",
-       "76  47.264269  88.475865\n",
-       "77  50.458160  75.809860\n",
-       "78  60.455556  42.508409\n",
-       "79  82.226662  42.719879\n",
-       "80  88.913896  69.803789\n",
-       "81  94.834507  45.694307\n",
-       "82  67.319257  66.589353\n",
-       "83  57.238706  59.514282\n",
-       "84  80.366756  90.960148\n",
-       "85  68.468522  85.594307\n",
-       "86  42.075455  78.844786\n",
-       "87  75.477702  90.424539\n",
-       "88  78.635424  96.647427\n",
-       "89  52.348004  60.769505\n",
-       "90  94.094331  77.159105\n",
-       "91  90.448551  87.508792\n",
-       "92  55.482161  35.570703\n",
-       "93  74.492692  84.845137\n",
-       "94  89.845807  45.358284\n",
-       "95  83.489163  48.380286\n",
-       "96  42.261701  87.103851\n",
-       "97  99.315009  68.775409\n",
-       "98  55.340018  64.931938\n",
-       "99  74.775893  89.529813\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data = pd.read_csv(\"data2.csv\")\n",
-    "n = data.shape[0]\n",
-    "\n",
-    "x = data[['x1','x2']]\n",
-    "y = data['y']\n",
-    "\n",
-    "w = np.zeros(data.shape[1])\n",
-    "\n",
-    "# alpha = 0.00001\n",
-    "\n",
-    "# y_linha_vector = []\n",
-    "\n",
-    "# vector_ones = np.ones((x.shape))\n",
-    "\n",
-    "\n",
-    "# erros = []\n",
-    "\n",
-    "# for _ in range(0, 1000):\n",
-    "#     sum_erro = 0\n",
-    "#     erro = 0\n",
-    "#     random_permutation = np.random.permutation(n)\n",
-    "#     x = x[random_permutation]\n",
-    "#     y = y[random_permutation]\n",
-    "#     for i in range(0, n):\n",
-    "#         y_linha = np.dot(np.transpose(w), x[i]) # calculo y'\n",
-    "#         erro = y[i] - y_linha # calculo erro y e y'\n",
-    "#         w = np.transpose(w) + (alpha * erro * np.transpose(x[i])) # atualização do peso\n",
-    "#         sum_erro += erro ** 2 # soma dos erros aos quadrados (função custo)\n",
-    "#     erros.append(0.5*sum_erro/n)\n",
-    "# # print(erros)\n",
-    "# plt.plot(erros)\n"
+    "# 7. Implementação Regressão Linear com Regularização"
    ]
   },
   {
