[+] Finalização Naive Bayes Gaussiano

--- a/Classificadores Baysianos.ipynb
+++ b/Classificadores Baysianos.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Naive Bayes"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -40,10 +33,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# 2. Naive Bayes tradicional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Análise de Discriminante Gaussiano"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Naive Bayes Gaussiano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.0: {'mean': array([0.00902745, 1.09005612]),\n",
+       "  'var': array([2.96935733, 2.53378593])},\n",
+       " 1.0: {'mean': array([6.03155088, 0.91906275]),\n",
+       "  'var': array([2.33753767, 2.61659692])},\n",
+       " 2.0: {'mean': array([2.92923512, 6.40278983]),\n",
+       "  'var': array([0.81776663, 4.85737166])}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blobs2 = pd.read_csv(\"blobs2.csv\", names=[\"x1\", \"x2\", \"y\"])\n",
     "len_2 = blobs2.shape[0]\n",
@@ -67,10 +97,18 @@
     "    \n",
     "    return mean_variance_classes\n",
     "\n",
-    "def predict(dict_with_mean_cov, tamanho, teste):\n",
+    "def predict(dict_means, tamanho, teste):\n",
     "    # Ver onde vou encaixar esse somatório\n",
     "    function = lambda mean, cov, x, pck: -0.5 * log((2*pi*cov)) - (1/(2*cov))*((x - mean)**2) + log(pck)\n",
-    "classes = train(blobs2, len_2)\n"
+    "    probs = []\n",
+    "    pck = len(dict_means.keys())/tamanho;\n",
+    "    for key in dict_means.keys():\n",
+    "        somatorio = 0\n",
+    "        for i in range(0, len(dict_means[key]['mean'])):\n",
+    "            somatorio += function(dict_means[key]['mean'][i], dict_means[key]['var'][i], x[i], pck)\n",
+    "        probls.append({key:})\n",
+    "            classes = train(blobs2, len_2)\n",
+    "classes\n"
    ]
   },
   {
