--- a/Regressão Logística.ipynb
+++ b/Regressão Logística.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regressão Logística multiclasse"
+    "# Regressão Logística Multiclasse"
    ]
   },
   {
