--- a/Praticas/Classificadores Baysianos/Classificadores Baysianos.ipynb
+++ b/Praticas/Classificadores Baysianos/Classificadores Baysianos.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "blobs2 = pd.read_csv(\"blobs2.csv\", names=[\"x1\", \"x2\", \"y\"])\n",
+    "blobs2 = pd.read_csv(\"../data/blobs2.csv\", names=[\"x1\", \"x2\", \"y\"])\n",
     "len_2 = blobs2.shape[0]\n",
     "\n",
     "def train(dataset, tamanho):\n",
@@ -181,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
