--- a/Praticas/KNN/KNN.ipynb
+++ b/Praticas/KNN/KNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,13 @@
        " [1.2363009342389093, 0.0]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"data_knn_classificacao.csv\", header = None).values\n",
+    "data = pd.read_csv(\"../data/data_knn_classificacao.csv\", header = None).values\n",
     "results = predict(data, [0,0], 4, [0,1])\n",
     "results"
    ]
@@ -216,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
