--- a/Praticas/Regressão Linear/Regressão Linear.ipynb
+++ b/Praticas/Regressão Linear/Regressão Linear.ipynb
@@ -35,7 +35,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data = pd.read_csv(\"data.csv\")\n",
+    "data = pd.read_csv(\"../data/data.csv\")\n",
     "n = data.shape[0]"
    ]
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
