--- a/Praticas/Regressão Logistica/Regressão Logística.ipynb
+++ b/Praticas/Regressão Logistica/Regressão Logística.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from math import exp\n",
     "\n",
-    "data = pd.read_csv(\"data2.csv\")\n",
+    "data = pd.read_csv(\"../data/data2.csv\")\n",
     "n = data.shape[0]"
    ]
   },
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
